<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailKarakterAcitivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/nama_karakter"
            style="@style/TextKarakterName.Detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@+id/tv_birthday_display"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_birthday_display"
            style="@style/TextDisplayDetail.RowTitle"
            android:text="@string/tanggal_lahir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo" />

        <TextView
            android:id="@+id/tv_detail_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/karakterk_birthday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_birthday_display"
            app:layout_constraintTop_toTopOf="@+id/tv_birthday_display" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="101dp" />

        <TextView
            android:id="@+id/tv_height_display"
            style="@style/TextDisplayDetail.RowTitle"
            android:text="@string/tinggi_badan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_birthday_display" />

        <TextView
            android:id="@+id/tv_detail_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/_192_cm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_birthday" />

        <TextView
            android:id="@+id/tv_description_display"
            style="@style/TextDisplayDetail.RowTitle"
            android:text="@string/deskripsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_height_display" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/deskripsi_karakter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_height"
            app:layout_constraintVertical_bias="0.0" />

        <include
            android:id="@+id/layout_share"
            layout="@layout/layout_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>